--- a/src/app/pages/pricing-plan/pricing-plan.component.html
+++ b/src/app/pages/pricing-plan/pricing-plan.component.html
@@ -1,30 +1,32 @@
 <div class="container my-3">
-  <div class="table-responsive">
-    <table class="table table-hover" *ngIf="pricingPlans; else noPlans">
-      <thead>
-        <tr>
-          <th scope="col">Type</th>
-          <th scope="col">Hourly Pricing</th>
-          <th scope="col">Daily Pricing</th>
-          <th scope="col">Minimum Hours</th>
-          <th scope="col">View Details</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let plan of pricingPlans">
-          <td>{{ plan.type | uppercase }}</td>
-          <td>{{ plan.hourlyPricing | currency : "EUR" }}</td>
-          <td>{{ plan.dailyPricing | currency : "EUR" }}</td>
-          <td>{{ plan.minimumHours }}</td>
-          <td>
-            <button class="btn btn-light" [routerLink]="[plan.type]">
-              View Details
-            </button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
+  <ng-container *ngIf="windowWidth >= 600; else cardStyle">
+    <div class="table-responsive">
+      <table class="table table-hover" *ngIf="pricingPlans; else noPlans">
+        <thead>
+          <tr>
+            <th scope="col">Type</th>
+            <th scope="col">Hourly Pricing</th>
+            <th scope="col">Daily Pricing</th>
+            <th scope="col">Minimum Hours</th>
+            <th scope="col">View Details</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let plan of pricingPlans">
+            <td>{{ plan.type | uppercase }}</td>
+            <td>{{ plan.hourlyPricing | currency : "EUR" }}</td>
+            <td>{{ plan.dailyPricing | currency : "EUR" }}</td>
+            <td>{{ plan.minimumHours }}</td>
+            <td>
+              <button class="btn btn-light" [routerLink]="[plan.type]">
+                View Details
+              </button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </ng-container>
 </div>
 
 <ng-template #noPlans>No Plans Currently</ng-template>
@@ -36,3 +38,55 @@
 >
   {{ errorMessage }}
 </div>
+
+<ng-template #cardStyle>
+  <div class="container d-flex mt-3 flex-column gap-5">
+    <div class="card" *ngFor="let plan of pricingPlans">
+      <div class="card-body container">
+        <div class="row my-2">
+          <div class="col-6 d-flex flex-column gap-2 justify-content-around">
+            <div>
+              <h4>Type</h4>
+            </div>
+            <div>
+              <h4>Hourly Pricing</h4>
+            </div>
+            <div>
+              <h4>Daily Pricing</h4>
+            </div>
+            <div>
+              <h4>Minimum Hours</h4>
+            </div>
+          </div>
+          <div class="col-6 d-flex flex-column gap-2 justify-content-around">
+            <div>
+              <p>
+                {{ plan.type | uppercase }}
+              </p>
+            </div>
+            <div>
+              <p>
+                {{ plan.hourlyPricing | currency : "EUR" }}
+              </p>
+            </div>
+            <div>
+              <p>{{ plan.dailyPricing | currency : "EUR" }}</p>
+            </div>
+            <div>
+              <p>{{ plan.minimumHours }}</p>
+            </div>
+          </div>
+        </div>
+        <div class="row my-2">
+          <!-- <div class="col-6"> -->
+          <div class="d-flex align-items-center justify-content-center">
+            <button class="btn btn-light" [routerLink]="[plan.type]">
+              View Details
+            </button>
+            <!-- </div> -->
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</ng-template>
